<resources>
    <string name="app_name">WFRelic</string>
    <string name="type1">Lith</string>
    <string name="type2">Meso</string>
    <string name="type3">Neo</string>
    <string name="type4">Axi</string>
    <string name="type5">Type 5</string>
    <string name="type1tag">Lith</string>
    <string name="type2tag">Meso</string>
    <string name="type3tag">Neo</string>
    <string name="type4tag">Axi</string>
    <string name="type5tag">type5</string>
    <string name="networknotavailable">Network not available</string>
</resources>
