<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wfrelic.MainActivity">
    <Button
        android:id="@+id/type1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/type1"
        android:tag="@string/type1tag"
        android:onClick="sendOnClick"/>
    <Button
        android:id="@+id/type2"
        android:layout_below="@id/type1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/type2"
        android:tag="@string/type2tag"
        android:onClick="sendOnClick"/>
    <Button
        android:id="@+id/type3"
        android:layout_below="@id/type2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/type3"
        android:tag="@string/type3tag"
        android:onClick="sendOnClick"/>
    <Button
        android:id="@+id/type4"
        android:layout_below="@id/type3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/type4"
        android:tag="@string/type4tag"
        android:onClick="sendOnClick"/>
</RelativeLayout>
